--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "watch": "nodemon",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
