--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node config/seeds.js",
+    "watch": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "nodemon": "^2.0.15",
     "stripe": "^8.195.0"
   }
 }
