--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon"
+    "seed": "node config/seeds.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-
     "apollo-server-express": "^3.6.1",
-
     "apollo-server": "^3.6.1",
-
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "graphql": "^16.2.0",
