--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "materialui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@stripe/stripe-js": "^1.22.0",
