--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "server",
+  "name": "mern-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-<<<<<<< HEAD
     "seed": "node config/seeds.js",
-=======
->>>>>>> c71ef0c2a85cdeec01d373648f421dc9e68dfe38
     "watch": "nodemon"
   },
   "keywords": [],
@@ -17,9 +14,7 @@
   "description": "",
   "dependencies": {
 
-    "apollo-server-express": "^3.6.1",
-
-    "apollo-server": "^3.6.1",
+    "apollo-server-express": "^2.11.0",
 
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
