--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "seed": "cd server && npm run seed",
     "start": "node server/server.js",
+    "install": "cd server && npm i && cd ../client && npm i",
     "watch": "nodemon"
   },
   "repository": {
