--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "build": "cd client && npm run build",
     "seed": "cd server && npm run seed",
     "start": "node server/server.js",
     "install": "cd server && npm i && cd ../client && npm i",
